--- a/colors/green.css
+++ b/colors/green.css
@@ -24,7 +24,7 @@ color:#b5af47;}
 .back, .contact_email a{
 border:1px solid #b5af47;}
 .no-touch .back:hover, .countdown_container, a.thumb_read_more, .full_width_carousel .left14 h3, .full_width_carousel .left14_last h3, input.form_submit_contact, input[type="checkbox"] + label:before, input[type="checkbox"]:checked + label:before
-{background-color:#b5af47; }
+{background-color:#f79745; }
 
 
 .tp-title span:nth-child(2), .tp-title:hover, .page_header_title a, .title span, .title_under, ul#main_menu li a.selected, ul#main_menu li a:hover, span.carousel_titles{
